Added news block, fullwidth post & footer with styling

--- a/FL13_HW5/homework/index.html
+++ b/FL13_HW5/homework/index.html
@@ -27,36 +27,58 @@
       <article class="post-1">
         <img src="img/post1.jpg" alt="Post №1 Picture">
         <div class="travel-cards-text-wrap">
-          <h2>My amazing travel-blog</h2>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perferendis odit dignissimos consequatur nobis</p>
-          <p class="traver-cards-date">07<br/>mar</p>
+          <h2>My amazing travel blog</h2>
+          <p class="travel-cards-text-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla aperiam, consequatur culpa nisi asperiores consequuntur explicabo nam, voluptatibus tempore non placeat tempora delectus deleniti, alias sed voluptates dolores nesciunt.</p>
+          <p class="travel-cards-date"><span class="travel-cards-date-monthday">07</span><br/>mar</p>
         </div>
       </article>
       <article class="post-2">
         <img src="img/post2.jpg" alt="Post №2 Picture">
         <div class="travel-cards-text-wrap">
-          <h2>My amazing travel-blog</h2>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perferendis odit dignissimos consequatur nobis</p>
+          <h2>Top 10 travel tips</h2>
+          <p class="travel-cards-text-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla aperiam, consequatur culpa nisi asperiores consequuntur explicabo nam, voluptatibus tempore non placeat tempora delectus deleniti, alias sed voluptates dolores nesciunt.</p>
+          <p class="travel-cards-date"><span class="travel-cards-date-monthday">07</span><br/>mar</p>
         </div>
       </article>
       <article class="post-3">
         <img src="img/post3.jpg" alt="Post №3 Picture">
         <div class="travel-cards-text-wrap">
-          <h2>My amazing travel-blog</h2>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perferendis odit dignissimos consequatur nobis</p>
+          <h2>Nice minimalist travel</h2>
+          <p class="travel-cards-text-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla aperiam, consequatur culpa nisi asperiores consequuntur explicabo nam, voluptatibus tempore non placeat tempora delectus deleniti, alias sed voluptates dolores nesciunt.</p>
+          <p class="travel-cards-date"><span class="travel-cards-date-monthday">07</span><br/>mar</p>
         </div>
       </article>
       <article class="post-4">
         <img src="img/post4.jpg" alt="Post №4 Picture">
         <div class="travel-cards-text-wrap">
-          <h2>My amazing travel-blog</h2>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perferendis odit dignissimos consequatur nobis</p>
+          <h2>With amazing regions</h2>
+          <p class="travel-cards-text-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla aperiam, consequatur culpa nisi asperiores consequuntur explicabo nam, voluptatibus tempore non placeat tempora delectus deleniti, alias sed voluptates dolores nesciunt.</p>
+          <p class="travel-cards-date"><span class="travel-cards-date-monthday">07</span><br/>mar</p>
+        </div>
+      </article>
+      <article id="post-5">
+        <div class="travel-cards-text-wrap">
+          <h2>And again - it's totally amazing</h2>
+          <p class="travel-cards-text-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla aperiam, consequatur culpa nisi asperiores consequuntur explicabo nam, voluptatibus tempore non placeat tempora delectus deleniti, alias sed voluptates dolores nesciunt.</p>
         </div>
       </article>
     </section>
-    <aside>
-
+    <aside class="news-cards">
+      <article>
+        <img src="img/news1.jpg" alt="News post №1 Picture">
+        <h3>Lorem Ipsum!</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto eius explicabo perferendis maxime, ad enim, asperiores modi inventore eligendi dignissimos consequatur dolores placeat, nisi omnis quas. Non totam in impedit?</p>
+      </article>
+      <article>
+        <img src="img/news2.jpg" alt="News post №2 Picture">
+        <h3>Lorem Ipsum!</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto eius explicabo perferendis maxime, ad enim, asperiores modi inventore eligendi dignissimos consequatur dolores placeat, nisi omnis quas. Non totam in impedit?</p>
+      </article>
     </aside>
   </main>
+  <footer>
+    <p>Copyright 2020, Epam systems<br/>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+    <p>Design and coding <br/>by name</p>
+  </footer>
 </body>
 </html>
