Added nav links, styling for news block, adaptive sizing for desktop version and hover on elements

--- a/FL13_HW5/homework/index.html
+++ b/FL13_HW5/homework/index.html
@@ -14,10 +14,10 @@
     <p>Travel<span>Blog</span></p>
     <nav>
       <ul>
-        <li>Blog</li>
-        <li>About</li>
-        <li>Archive</li>
-        <li>Contact</li>
+        <li><a href='#'>Blog</a></li>
+        <li><a href='#'>About</a></li>
+        <li><a href='#'>Archive</a></li>
+        <li><a href='#'>Contact</a></li>
       </ul>
     </nav>
   </header>
@@ -66,13 +66,19 @@
     <aside class="news-cards">
       <article>
         <img src="img/news1.jpg" alt="News post №1 Picture">
-        <h3>Lorem Ipsum!</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto eius explicabo perferendis maxime, ad enim, asperiores modi inventore eligendi dignissimos consequatur dolores placeat, nisi omnis quas. Non totam in impedit?</p>
+        <div class="news-cards-text-wrap">
+          <h3>Breaking news</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto eius explicabo perferendis maxime, ad enim, asperiores modi inventore eligendi dignissimos consequatur dolores placeat, nisi omnis quas. Non totam in impedit?</p>
+          <button>LEARN MORE...</button>
+        </div>
       </article>
       <article>
         <img src="img/news2.jpg" alt="News post №2 Picture">
-        <h3>Lorem Ipsum!</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto eius explicabo perferendis maxime, ad enim, asperiores modi inventore eligendi dignissimos consequatur dolores placeat, nisi omnis quas. Non totam in impedit?</p>
+        <div class="news-cards-text-wrap">
+          <h3>Second news on the Travel blog</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto eius explicabo perferendis maxime, ad enim, asperiores modi inventore eligendi dignissimos consequatur dolores placeat, nisi omnis quas. Non totam in impedit?</p>
+          <button>LEARN MORE...</button>
+        </div> 
       </article>
     </aside>
   </main>
