--- a/FL13_HW5/homework/index.html
+++ b/FL13_HW5/homework/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
+﻿<!DOCTYPE html>
+<html lang="zxx">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,7 +24,7 @@
   </header>
 
   <main>
-    <section class="travel-cards">
+    <div class="travel-cards">
       <article class="post-1">
         <img src="img/post1.jpg" alt="Post №1 Picture">
         <div class="travel-cards-text-wrap">
@@ -63,7 +63,7 @@
           <p class="travel-cards-text-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla aperiam, consequatur culpa nisi asperiores consequuntur explicabo nam, voluptatibus tempore non placeat tempora delectus deleniti, alias sed voluptates dolores nesciunt.</p>
         </div>
       </article>
-    </section>
+    </div>
     <aside class="news-cards">
       <article>
         <img src="img/news1.jpg" alt="News post №1 Picture">
