--- a/FL13_HW13/homework/index.html
+++ b/FL13_HW13/homework/index.html
@@ -8,137 +8,146 @@
     <title>Front-end Lab CSS Frameworks!</title>
   </head>
   <body>
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">Games</a>
-            <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                    <a class="nav-link" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Pricing</a>
-                    </li>
-                    <li class="nav-item">
-                    <a class="nav-link" href="#">Disabled</a>
-                    </li>
-                </ul>
-            </div>
+    <header class="container">
+        <nav class="row navbar navbar-expand-md flex-row">
+          <div class="col-6 col-md-2 mr-md-4">
+            <a href="#" class="navbar-brand">
+              <h2 class="navbar-text text-dark">Games</h2>
+            </a>
+          </div>
+          <div class="col-0 col-md-10 collapse navbar-collapse justify-content-around" id="collapse_target">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                <a class="nav-link text-dark" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link text-dark" href="#">Features</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-dark" href="#">Pricing</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link text-dark" href="#">Disabled</a>
+                </li>
+            </ul>
             <button type="button" class="btn btn-dark">Push to start</button>
-          </nav>
+          </div>
+          <div class="col-6 col-md-0">
+            <button class="navbar-toggler float-right" data-toggle="collapse" data-target="#collapse_target">
+              <span class="navbar-toggler-icon">&#9776;</span>
+            </button>
+          </div>
+        </nav>
     </header>
-    <section class="home">
-        <div class="home-info-wrap">
+    <section class="home container pb-4 mb-sm-4">
+        <div class="row align-items-center flex-column-reverse flex-md-row justify-content-md-center">
+          <div class="col col-sm-12 col-md-6">
             <h1>Front-end Lab CSS-Frameworks</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo accusantium quis odit incidunt nostrum! Sint, laborum? Necessitatibus, repellat distinctio!</p>
             <button type="button" class="btn">Find out more</button>
-        </div>
-        <img src="assets/hero-5.jpg" alt="Home section picture" class="float-right">
-    </section>
-    <section class="games-1 text-center">
-        <div class="games-1-info">
-            <h4>Games section</h4>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda soluta facere blanditiis atque doloribus</p>
-        </div>
-        <div class="container games-1-cards-wrap">
-            <div class="row">
-              <div class="col-sm">
-                <img src="assets/1.jpg" alt="" class="img-thumbnail">
-                <h5>Card title</h5>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos corrupti dolores quasi deserunt.</p>
-              </div>
-              <div class="col-sm">
-                <img src="assets/2.jpg" alt="" class="img-thumbnail">
-                <h5>Card title</h5>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos corrupti dolores quasi deserunt.</p>
-              </div>
-              <div class="col-sm">
-                <img src="assets/3.jpg" alt="" class="img-thumbnail">
-                <h5>Card title</h5>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos corrupti dolores quasi deserunt.</p>
-              </div>
-            </div>
-            <div class="row">
-                <div class="col-sm">
-                  <img src="assets/4.jpg" alt="" class="img-thumbnail">
-                  <h5>Card title</h5>
-                  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos corrupti dolores quasi deserunt.</p>
-                </div>
-                <div class="col-sm">
-                  <img src="assets/5.jpg" alt="" class="img-thumbnail">
-                  <h5>Card title</h5>
-                  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos corrupti dolores quasi deserunt.</p>
-                </div>
-                <div class="col-sm">
-                  <img src="assets/6.jpg" alt="" class="img-thumbnail">
-                  <h5>Card title</h5>
-                  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos corrupti dolores quasi deserunt.</p>
-                </div>
-              </div>
+          </div>
+          <div class="col col-sm-12 col-md-6">
+            <img src="assets/hero-5.jpg" alt="Home section picture" class="img-fluid">
+          </div>
         </div>
     </section>
-    <section class="games-2 bg-light text-center">
-        <div class="games-2-info">
-            <h4>Games section</h4>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda soluta facere blanditiis atque doloribus</p>
-        </div>
-        <div class="container games-2-cards-wrap">
-            <div class="row">
-              <div class="col-sm">
-                <img src="assets/7.jpg" alt="" class="img-thumbnail">
-                <h5>Card title</h5>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos corrupti dolores quasi deserunt.</p>
-              </div>
-              <div class="col-sm">
-                <img src="assets/8.jpg" alt="" class="img-thumbnail">
-                <h5>Card title</h5>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos corrupti dolores quasi deserunt.</p>
-              </div>
+    <section class="games-1 bg-dark text-center text-white pt-4 pb-4 pb-sm-4">
+      <div class="container">
+          <div class="row justify-content-center">
+            <div class="col col-md-8">
+              <h4>Games section</h4>
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda soluta facere blanditiis atque doloribus</p>
             </div>
-            <div class="row">
-                <div class="col-sm">
-                  <img src="assets/9.jpg" alt="" class="img-thumbnail">
-                  <h5>Card title</h5>
-                  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos corrupti dolores quasi deserunt.</p>
-                </div>
-                <div class="col-sm">
-                  <img src="assets/10.jpg" alt="" class="img-thumbnail">
-                  <h5>Card title</h5>
-                  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos corrupti dolores quasi deserunt.</p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm">
-                  <img src="assets/11.jpg" alt="" class="img-thumbnail">
-                  <h5>Card title</h5>
-                  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos corrupti dolores quasi deserunt.</p>
-                </div>
-                <div class="col-sm">
-                  <img src="assets/12.jpg" alt="" class="img-thumbnail">
-                  <h5>Card title</h5>
-                  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos corrupti dolores quasi deserunt.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <footer class="page-footer font-small pt-4">
-        <div class="container-fluid text-center text-md-left">
+          </div>
           <div class="row">
-            <div class="col-md-6 mt-md-0 mt-3">
-              <h5>Subscribe</h5>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet dolor distinctio voluptates iure</p>
+            <div class="col-12 col-sm-6 col-md-4 mt-4 mb-4">
+              <img src="assets/1.jpg" alt="" class="img-fluid mb-2">
+              <h5>Card title</h5>
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos corrupti dolores quasi deserunt.</p>
             </div>
-            <hr class="clearfix w-100 d-md-none pb-3">
-            <div class="col-md-6 mt-md-0 mt-3">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-block" type="submit" id="footer-search-btn">Search</button>
+            <div class="col-12 col-sm-6 col-md-4 mt-4 mb-4">
+              <img src="assets/2.jpg" alt="" class="img-fluid mb-2">
+              <h5>Card title</h5>
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos corrupti dolores quasi deserunt.</p>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 mt-4 mb-4">
+              <img src="assets/3.jpg" alt="" class="img-fluid mb-2">
+              <h5>Card title</h5>
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos corrupti dolores quasi deserunt.</p>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 mt-4 mb-4">
+              <img src="assets/4.jpg" alt="" class="img-fluid mb-2">
+              <h5>Card title</h5>
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos corrupti dolores quasi deserunt.</p>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 mt-4 mb-4">
+              <img src="assets/5.jpg" alt="" class="img-fluid mb-2">
+              <h5>Card title</h5>
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos corrupti dolores quasi deserunt.</p>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 mt-4 mb-4">
+              <img src="assets/6.jpg" alt="" class="img-fluid mb-2">
+              <h5>Card title</h5>
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos corrupti dolores quasi deserunt.</p>
             </div>
           </div>
         </div>
-        <div class="footer-copyright text-center py-3">© 2020 
+    </section>
+    <section class="games-2 bg-light text-center pt-4 pb-4">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col col-sm mt-4 mb-4 mb-sm-0">
+            <h4>Games section</h4>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-12 col-md-6 mt-4 mb-4">
+            <img src="assets/7.jpg" alt="" class="img-fluid mb-2 shadow">
+            <h5>Card title</h5>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos corrupti dolores quasi deserunt.</p>
+          </div>
+          <div class="col-12 col-md-6 mt-4 mb-4">
+            <img src="assets/8.jpg" alt="" class="img-fluid mb-2 shadow">
+            <h5>Card title</h5>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos corrupti dolores quasi deserunt.</p>
+          </div>
+          <div class="col-12 col-md-6 mt-4 mb-4">
+            <img src="assets/9.jpg" alt="" class="img-fluid mb-2 shadow">
+            <h5>Card title</h5>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos corrupti dolores quasi deserunt.</p>
+          </div>
+          <div class="col-12 col-md-6 mt-4 mb-4">
+            <img src="assets/10.jpg" alt="" class="img-fluid mb-2 shadow">
+            <h5>Card title</h5>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos corrupti dolores quasi deserunt.</p>
+          </div>
+          <div class="col-12 col-md-6 mt-4 mb-4">
+            <img src="assets/11.jpg" alt="" class="img-fluid mb-2 shadow">
+            <h5>Card title</h5>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos corrupti dolores quasi deserunt.</p>
+          </div>
+          <div class="col col-sm-12 col-md-6 mt-4 mb-4">
+            <img src="assets/12.jpg" alt="" class="img-fluid mb-2 shadow">
+            <h5>Card title</h5>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos corrupti dolores quasi deserunt.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer class="bg-dark text-white font-small pt-4">
+        <div class="container">
+          <div class="row align-items-center flex-column flex-md-row">
+            <div class="col col-sm-12 col-md-6 mt-4">
+              <h5>Subscribe</h5>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet dolor distinctio voluptates iure</p>
+            </div>
+            <div class="col col-sm-12 col-md-6 mt-1 mt-md-4">
+                <input class="form-control" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-block mt-2" type="submit" id="footer-search-btn">Search</button>
+            </div>
+          </div>
+        <div class="footer-copyright text-center mt-5 pb-4">© 2020 
           <span>Frond-end Lab</span>
         </div>
     </footer>
