Validation errors were fixed

--- a/FL13_HW13/homework/index.html
+++ b/FL13_HW13/homework/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="ru">
+<html lang="zxx">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -147,6 +147,7 @@
                 <button class="btn btn-block mt-2" type="submit" id="footer-search-btn">Search</button>
             </div>
           </div>
+        </div>
         <div class="footer-copyright text-center mt-5 pb-4">© 2020 
           <span>Frond-end Lab</span>
         </div>
